[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "page_tracker"
version = "1.0.0"
dependencies = ["Flask", "redis"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-timeout",
    "requests",
    "bandit",
    "flake8",
    "black",
    "isort",
    "pylint",
]
